infra/modules/network/main.tf
locals { common_tags = merge(var.tags, { Environment = var.name }) }

resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = merge(local.common_tags, { Name = "${var.name}-vpc" })
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = merge(local.common_tags, { Name = "${var.name}-igw" })
}

resource "aws_subnet" "public" {
  count = length(var.azs)
  vpc_id = aws_vpc.this.id
  availability_zone = var.azs[count.index]
  cidr_block = var.public_subnet_cidrs[count.index]
  map_public_ip_on_launch = false
  tags = merge(local.common_tags, { Name = "${var.name}-public-${count.index + 1}" })
}

resource "aws_subnet" "app" {
  count = length(var.azs)
  vpc_id = aws_vpc.this.id
  availability_zone = var.azs[count.index]
  cidr_block = var.app_subnet_cidrs[count.index]
  tags = merge(local.common_tags, { Name = "${var.name}-app-${count.index + 1}" })
}

resource "aws_subnet" "db" {
  count = length(var.azs)
  vpc_id = aws_vpc.this.id
  availability_zone = var.azs[count.index]
  cidr_block = var.db_subnet_cidrs[count.index]
  tags = merge(local.common_tags, { Name = "${var.name}-db-${count.index + 1}" })
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id
  route { cidr_block = "0.0.0.0/0" gateway_id = aws_internet_gateway.this.id }
  tags = merge(local.common_tags, { Name = "${var.name}-public-rt" })
}

resource "aws_route_table_association" "public" {
  count = length(var.azs)
  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
  tags = merge(local.common_tags, { Name = "${var.name}-nat-eip" })
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public[0].id
  depends_on = [aws_internet_gateway.this]
  tags = merge(local.common_tags, { Name = "${var.name}-nat" })
}

resource "aws_route_table" "private" {
  count = length(var.azs)
  vpc_id = aws_vpc.this.id
  route { cidr_block = "0.0.0.0/0" nat_gateway_id = aws_nat_gateway.this.id }
  tags = merge(local.common_tags, { Name = "${var.name}-private-rt-${count.index + 1}" })
}

resource "aws_route_table_association" "app" {
  count = length(var.azs)
  subnet_id = aws_subnet.app[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}

resource "aws_route_table_association" "db" {
  count = length(var.azs)
  subnet_id = aws_subnet.db[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}
